log
Wed 24 Apr 2024 06:28:04 PM UTC: 
 tests:  0|6
total_score: 0/70
d9747f7
Wed 24 Apr 2024 09:08:26 PM UTC: 
 hashmap.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
8e608eb
Wed 24 Apr 2024 09:37:35 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
eaa3cfb
Wed 24 Apr 2024 09:41:24 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
19dd25c
Wed 24 Apr 2024 09:46:42 PM UTC: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:88:47: error: expected ‘)’ before ‘{’ token
   88 |       if(is_equal(map->buckets[posi]->key,key)
      |         ~                                     ^
      |                                               )
   89 |       {
      |       ~                                        
hashmap.c:93:5: error: expected expression before ‘}’ token
   93 |     }
      |     ^
Compilation failed
2c7cb70
Wed 24 Apr 2024 09:48:19 PM UTC: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  6|4
total_score: 30/70
9f010fb
Wed 24 Apr 2024 09:48:55 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
653c26f
Wed 24 Apr 2024 09:51:17 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
c41fea9
Wed 24 Apr 2024 09:52:20 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:85:1: error: expected expression before ‘}’ token
   85 | }
      | ^
Compilation failed
19ac8e1
Wed 24 Apr 2024 09:52:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:80:7: error: unused variable ‘posicion’ [-Werror=unused-variable]
   80 |   int posicion = hash(key,map->capacity);
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
be497da
Wed 24 Apr 2024 09:52:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
042c782
Wed 24 Apr 2024 09:53:34 PM UTC: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
accf535
Wed 24 Apr 2024 09:56:02 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
7f1e9d7
Wed 24 Apr 2024 09:56:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
f2c6999
Wed 24 Apr 2024 09:58:37 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
3ab34db
Wed 24 Apr 2024 10:00:20 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  12|2
total_score: 50/70
b24905f
Wed 24 Apr 2024 10:01:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
1a249b4
Wed 24 Apr 2024 10:03:37 PM UTC: 
 hashmap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:135:1: error: control reaches end of non-void function [-Werror=return-type]
  135 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0a815f0
Wed 24 Apr 2024 10:04:02 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
eec135b
Wed 24 Apr 2024 10:07:39 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:114:67: error: expected statement before ‘)’ token
  114 |       if (map->buckets[i] != NULL && map->buckets[i]->key != NULL))
      |                                                                   ^
Compilation failed
84da6d8
Wed 24 Apr 2024 10:07:44 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
f67fcdf
Wed 24 Apr 2024 10:10:31 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
e0847ce
